<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="true"
        android:isScrollContainer="true"
        android:layout_margin="@dimen/base"
        android:paddingBottom="32dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/bg_work_day"
                android:gravity="center"
                android:text="@string/work"
                android:textAppearance="@style/Text_12_R.DG" />

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/base_xxs"
                android:background="@color/gray" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/bg_rest_day"
                android:gravity="center"
                android:text="@string/rest"
                android:textAppearance="@style/Text_12_R.DG" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_s"
            app:cardCornerRadius="@dimen/corner_20">

            <com.applandeo.materialcalendarview.CalendarView
                android:id="@+id/calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:type="one_day_picker"
                app:eventsEnabled="true"
                app:headerColor="@color/white"
                app:headerLabelColor="@color/dark"
                app:previousButtonSrc="@drawable/ic_arrow_left_s"
                app:forwardButtonSrc="@drawable/ic_arrow_right_s"
                app:selectionColor="@color/red"
                app:selectionLabelColor="@color/white"
                app:daysLabelsColor="@color/dark_gray"
                app:todayLabelColor="@color/dark_gray"
                app:typeface="@font/stolzl_regular"
                app:anotherMonthsDaysLabelsColor="@color/middle_gray_blue"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/edit_box"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_s"
            app:cardCornerRadius="@dimen/corner_20">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/base"
                android:orientation="vertical">

                <TextView
                    android:textAppearance="@style/Text_12_B.BGC1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shift"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:padding="0dp"
                    android:includeFontPadding="false"
                    android:layout_marginTop="@dimen/base_xxxs"
                    app:endIconMode="dropdown_menu"
                    app:endIconCheckable="true"
                    app:endIconDrawable="@drawable/selector_drop_down"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Small">

                    <AutoCompleteTextView
                        android:id="@+id/day"
                        style="@style/Widget.Material3.AutoCompleteTextView.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:text="@string/work_day"
                        app:simpleItems="@array/days"
                        android:includeFontPadding="false"
                        android:padding="0dp"
                        android:textAppearance="@style/Text_14_B.D" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_save"
                    style="@style/Button_Filled"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:enabled="true"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/save"
                    android:layout_marginTop="@dimen/base_s"
                    app:cornerRadius="@dimen/corner_18" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_cancel"
                    style="@style/Button_Filled_Tone"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:enabled="true"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/cancel"
                    android:layout_marginTop="@dimen/base_s"
                    app:cornerRadius="@dimen/corner_18" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</ScrollView>
